ANALYSIS/HUAWEICLOUD_CILIUM_CUSTOMER_WORKLOAD.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-customer-test
---
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  namespace: cilium-customer-test
  labels:
    app: customer-web
spec:
  nodeName: ecs-4b3b-6555-0005
  containers:
    - name: web
      image: m.daocloud.io/docker.io/library/busybox:1.36.1
      imagePullPolicy: IfNotPresent
      command: ["sh", "-c"]
      args: ["mkdir -p /www; echo pod1 > /www/index.html; exec httpd -f -p 80 -h /www"]
---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  namespace: cilium-customer-test
spec:
  nodeName: ecs-4b3b-6555-0005
  containers:
    - name: client
      image: m.daocloud.io/docker.io/library/busybox:1.36.1
      imagePullPolicy: IfNotPresent
      command: ["sh", "-c"]
      args: ["trap : TERM INT; sleep infinity & wait"]
---
apiVersion: v1
kind: Pod
metadata:
  name: pod3
  namespace: cilium-customer-test
  labels:
    app: customer-web
spec:
  nodeName: ecs-4b3b-6555-0002
  containers:
    - name: web
      image: m.daocloud.io/docker.io/library/busybox:1.36.1
      imagePullPolicy: IfNotPresent
      command: ["sh", "-c"]
      args: ["mkdir -p /www; echo pod3 > /www/index.html; exec httpd -f -p 80 -h /www"]
---
apiVersion: v1
kind: Service
metadata:
  name: mynginx-nodeport
  namespace: cilium-customer-test
spec:
  type: NodePort
  selector:
    app: customer-web
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
